--- a/Source/Santase.Logic/Santase.Logic.csproj
+++ b/Source/Santase.Logic/Santase.Logic.csproj
@@ -44,6 +44,9 @@
     <Compile Include="Cards\CardExtensions.cs" />
     <Compile Include="Cards\CardSuit.cs" />
     <Compile Include="Cards\CardType.cs" />
+    <Compile Include="Cards\Contracts\IDeck.cs" />
+    <Compile Include="Cards\Deck.cs" />
+    <Compile Include="InternalGameException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
