Implemented SantaseGame class

--- a/Source/Santase.Logic/Santase.Logic.csproj
+++ b/Source/Santase.Logic/Santase.Logic.csproj
@@ -46,10 +46,14 @@
     <Compile Include="Cards\CardType.cs" />
     <Compile Include="Cards\Contracts\IDeck.cs" />
     <Compile Include="Cards\Deck.cs" />
-    <Compile Include="Extension\EnumerableExtensions.cs" />
-    <Compile Include="Extension\RandomProvider.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\RandomProvider.cs" />
+    <Compile Include="GameRound.cs" />
+    <Compile Include="IGameRound.cs" />
     <Compile Include="InternalGameException.cs" />
+    <Compile Include="ISantaseGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SantaseGame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
