--- a/Source/Santase.Logic/Santase.Logic.csproj
+++ b/Source/Santase.Logic/Santase.Logic.csproj
@@ -60,6 +60,11 @@
     <Compile Include="Players\PlayerAction.cs" />
     <Compile Include="Players\PlayerTurnContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundStates\BaseRoundState.cs" />
+    <Compile Include="RoundStates\FinalRoundState.cs" />
+    <Compile Include="RoundStates\MoreThan2CardsLeftRoundState.cs" />
+    <Compile Include="RoundStates\StartRoundState.cs" />
+    <Compile Include="RoundStates\TwoCardsLeftRoundState.cs" />
     <Compile Include="SantaseGame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
